# VulkanInfiniteProceduralTerrain

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
base/: CommandBuffer.hpp  CommandPool.hpp  DescriptorPool.hpp  DescriptorSet.hpp  DescriptorSetLayout.hpp  Image.hpp  ImageView.hpp  Noise.cpp  Noise.h  Pipeline.hpp  PipelineLayout.hpp  VulkanBuffer.hpp  VulkanDebug.cpp  VulkanDevice.hpp  VulkanExampleBase.cpp  VulkanExampleBase.h  VulkanHeightmap.hpp  VulkanSwapChain.hpp  VulkanTexture.hpp  VulkanUIOverlay.cpp  VulkanUIOverlay.h  VulkanglTFModel.cpp  VulkanglTFModel.h  camera.hpp  frustum.hpp  keycodes.hpp
data/: README.md
data/presets/: birches.txt  coastline.txt  default.txt  flat.txt  palms.txt  palms2.txt
data/scenes/: grasspatch.gltf  grasspatch_large.gltf  grasspatch_medium.gltf  plane.gltf
data/scenes/trees/spruce/: spruce.gltf
data/scenes/trees/spruce_imposter/: spruce_imposter.gltf
data/shaders/: CMakeLists.txt  debug_csm.frag  debug_csm.frag.spv  debug_csm.vert  debug_csm.vert.spv  depthpass.vert  depthpass.vert.spv  grass.frag  grass.frag.spv  grass.vert  grass.vert.spv  quad.frag  quad.frag.spv  quad.vert  quad.vert.spv  skysphere.frag  skysphere.frag.spv  skysphere.vert  skysphere.vert.spv  terrain.frag  terrain.frag.spv  terrain.vert  terrain.vert.spv  terrain_depthpass.frag  terrain_depthpass.frag.spv  tree.frag  tree.frag.spv  tree.vert  tree.vert.spv  tree_depthpass.frag  tree_depthpass.frag.spv  tree_depthpass.vert  tree_depthpass.vert.spv  tree_single.vert  tree_single.vert.spv  uioverlay.frag.spv  uioverlay.vert.spv  water.frag  water.frag.spv  water.vert  (+1 more)
data/shaders/includes/: constants.glsl  fog.glsl  shadow.glsl  types.glsl
data/textures/: water_normal_rgba.ktx
src/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  HeightMapSettings.cpp  HeightMapSettings.h  InfiniteTerrain.cpp  InfiniteTerrain.h  TerrainChunk.cpp  TerrainChunk.h  VulkanContext.cpp  VulkanContext.h  imgui.ini  main.cpp
